2008-07-18  Bradley M. Kuhn  <bkuhn@ebb.org>

	* tests/test-pokerrenderer.py.in
	(PokerRendererTests.test34_blindAnteDoesWhat): Wrote method.

2008-07-13  Bradley M. Kuhn  <bkuhn@ebb.org>

	* tests/test-pokerrenderer.py.in
	(PokerRendererTests.test14_packetSelfInPositionHandleConnection):
	Wrote method.
	(PokerRendererTests.MockPokerProtocol.registerLagmax): saved func
	value for later test.
	(PokerRendererTests.MockPokerFactory.packet2game): Added support
	for noGame setting.
	(PokerRendererTests.test16_checkUpdateLagMaxWithValidGameObject):
	Wrote method.
	(PokerRendererTests.test15_checkUpdateLagMaxWithoutGameObject):
	Wrote method.
	(PokerRendererTests.MockGame.isRunning): Wrote method.
	(PokerRendererTests.MockGame.__init__): Wrote method.
	(PokerRendererTests.MockPokerFactory.__init__): added
	gameIsRunning parameter.
	(PokerRendererTests.test17_maybeStartLookCardsNoGameRunning):
	Wrote method.
	(PokerRendererTests.test18_scheduleLookCardsNoGameRunning): Wrote
	method.
	(PokerRendererTests.test19_clickSitOutCoverage): Wrote method.
	(PokerRendererTests.test20_handleMenuUnknownName): Wrote method.
	(PokerRendererTests.test21_handleLobbyUnknownAction): Wrote method.
	(PokerRendererTests.test22_currencySerial2NameNotString): Wrote method.
	(PokerRendererTests.test24_handleHandsUnknownActoin): Wrote test.
	(PokerRendererTests.test26_handleHandsReplayHand): Wrote test.
	(PokerRendererTests.test25_handleHandsOutOfState): Wrote test.
	(PokerRendererTests.test27_rotateTableWithTwo): Wrote method.
	(PokerRendererTests.test28_sendPacketCoverage): Wrote test.
	(PokerRendererTests.test29_schedulePacketCoverage): Wrote method.
	(PokerRendererTests.test30_getSeatUserNotLoggedInAndInWeirdState):
	Wrote method.
	(PokerRendererTests.MockDisplay.setRenderer): Wrot method.
	(PokerRendererTests.test31_bootstrapFirstTimeInterfaceReady):
	Wrote method.
	(PokerRendererTests.test32_bootstrapFristTimeInterfaceNotReady):
	Wrote method.