@@ -2,6 +2,7 @@
 
 	* tests/test-pokerrenderer.py.in
 	(PokerRendererTests.test34_blindAnteDoesWhat): Wrote method.
+	(PokerRendererTests.test34_confirmPayBlindBadWhat): Wrote method.
 
 2008-07-13  Bradley M. Kuhn  <bkuhn@ebb.org>
 
